# emblocs

./: .gitignore  README.md  emblocs.json  emblocs_cfg.json
.github/: copilot-instructions.md
cmake/: emblocs.cmake
docs/: DEVELOPMENT.md  architecture.md  bloc_language.md  blocs_language.md  dirtree.txt  monitor-startup.md  monitor.md
python/: .gitignore  bl_command.py  bl_console.py  bl_scope.py  bl_serial.py  bloc_compiler.py  bloc_parser.py  bloc_resolver.py  blocs_compiler.py  blocs_output.py  blocs_parser.py  bundle.py  emblocs.py  emblocs_common.py  emblocs_gui.py  emblocs_output.py  expressions.py  expressions_old.py  monitor_app.py  parse_common.py  protocol.py  startup_dialog.py  testing.py  variant_compiler.py
python/test-files/: UTF-16BE.bloc  UTF-8-BOM.bloc  UTF-8.bloc  complex_example.bloc  test.blocs  test_expressions.txt  test_parser.py
python/tests/: conftest.py  test_bloc_parser.py  test_bloc_resolver.py  test_blocs_compiler.py  test_blocs_parser.py  test_bundle.py  test_emblocs.py  test_emblocs_common.py  test_expressions.py  test_parse_common.py
src/: Makefile  emblocs.c  emblocs.h  emblocs_api.h  emblocs_comp.h  emblocs_config.h  emblocs_core.c  emblocs_core.h  emblocs_init.c  emblocs_parse.c  emblocs_priv.c  emblocs_priv.h  emblocs_show.c  footer.mk  header.mk  include.mk  linked_list.c  linked_list.h  main.c  mux2.c  perftimer.c  platform.h  printing-test.c  printing.c  printing.h  sum2.c  tmp_gpio.c  tmp_gpio.h  tmp_mux2.c  tmp_perftimer.c  tmp_sum2.c  watch.c  watch.h
src/G431/: Makefile  main.c  main.h  platform.h  platform_g431.c  platform_g431.h
src/components/: CMakeLists.txt  bl_rgb.c  bl_rgb.h  complex_example.bloc  convert.c  integrator.bloc  integrator.c  integrator.h  limit1.bloc  limit1.c  limit1.h  limit2.c  mux.bloc  mux.c  mux.h  mux2.c  not.bloc  not.c  perftimer.c  pico_gpio.bloc  pico_gpio.c  pico_gpio.h  rp2040_gpio.c  siggen.c  stm32_gpio.bloc  stm32_gpio.c  stm32_gpio.h  sum2.c  watch.c  watch.h
src/components_new/: integrator.bloc  integrator.c  limit1.h  mux.bloc  not.bloc  not.c  not.h  pico_gpio.bloc  stm32_gpio.bloc  stm32_gpio.c
src/emblocs/: CMakeLists.txt  bl_monitor.c  bl_monitor.h  emblocs_api.h  emblocs_common.h  emblocs_comp.h  emblocs_config.h  emblocs_core.c  emblocs_parse.c  emblocs_priv.h  emblocs_show.c
src/misc/: CMakeLists.txt  bundle.c  bundle.h  linked_list.c  printing.c  printing.h  ser_crc.c  ser_crc.h  serial.c  serial.h  serial_g431.c  str_to_xx.c  str_to_xx.h
src/old_components/: bl_rgb.c  bl_rgb.h  convert.c  limit2.c  rp2040_gpio.c  rp2040_gpio.h  scope.c  tmp_gpio.c  tmp_gpio.h
(+30 files in other folders)
